--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header class="first_header">
-      <div>
+      <div class="logo-container">
+        <p class="logo"></p>
+        <p class="logo"></p>
+        <p class="logo"></p>
         <p class="logo"></p>
       </div>
       <nav>
@@ -21,7 +24,10 @@
       </nav>
     </header>
     <header class="new_header">
-      <div>
+      <div class="logo-container">
+        <p class="logo_2"></p>
+        <p class="logo_2"></p>
+        <p class="logo_2"></p>
         <p class="logo_2"></p>
       </div>
       <nav>
